--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+*.log
+*.txt
+
 ### STS ###
 .apt_generated
 .classpath
@@ -25,6 +28,7 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
+nbactions.xml
 build/
 
 ### VS Code ###
