Character count implementation

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
                             </goals>
                         </execution>
                     </executions>
+                    <configuration>
+                        <excludes>
+                            <exclude>**/*Application.class</exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
         </plugins>
     </build>
